# ooxml

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  SPEC.md  TODO.md  corpora  flake.nix
.claude/: settings.json
.github/workflows/: ci.yml
crates/ooxml/: Cargo.toml
crates/ooxml-codegen/: Cargo.toml
crates/ooxml-codegen/src/: analysis.rs  ast.rs  codegen.rs  lexer.rs  lib.rs  parser.rs  parser_gen.rs  serializer_gen.rs
crates/ooxml-codegen/tests/: codegen_wml.rs
crates/ooxml-corpus/: Cargo.toml
crates/ooxml-corpus/src/: edge_cases.rs  error_analysis.rs  feature.rs  lib.rs  main.rs  roundtrip.rs  validation.rs
crates/ooxml-dml/: Cargo.toml  build.rs
crates/ooxml-dml/src/: ext.rs  generated.rs  generated_parsers.rs  generated_serializers.rs  lib.rs  text.rs
crates/ooxml-fixtures/: Cargo.toml  build.rs
crates/ooxml-omml/: Cargo.toml
crates/ooxml-omml/src/: lib.rs  math.rs
crates/ooxml-pml/: Cargo.toml  build.rs
crates/ooxml-pml/examples/: read_pptx.rs
crates/ooxml-pml/src/: error.rs  ext.rs  generated.rs  generated_parsers.rs  generated_serializers.rs  lib.rs  presentation.rs  writer.rs
crates/ooxml-sml/: Cargo.toml  build.rs
crates/ooxml-sml/benches/: parse_benchmark.rs
crates/ooxml-sml/examples/: cell_access.rs  create_xlsx.rs  read_xlsx.rs
crates/ooxml-sml/src/: error.rs  ext.rs  generated.rs  generated_parsers.rs  generated_serializers.rs  lazy.rs  lib.rs  workbook.rs  writer.rs
crates/ooxml-sml/tests/: corpus.rs  fixture_tests.rs  parity_tests.rs  roundtrip.rs  test_generated_parsers.rs  test_generated_serde.rs  test_resolved_sheet.rs  test_worksheet_parsing.rs
crates/ooxml-wml/: Cargo.toml  build.rs
crates/ooxml-wml/examples/: create_docx.rs  read_docx.rs
crates/ooxml-wml/src/: convenience.rs  document.rs  error.rs  ext.rs  generated.rs  generated_parsers.rs  generated_serializers.rs  lib.rs  raw_xml.rs  styles.rs  writer.rs
crates/ooxml-wml/tests/: integration.rs  parity_tests.rs  test_generated_parsers.rs  test_generated_serializers.rs
crates/ooxml-xml/: Cargo.toml
crates/ooxml-xml/src/: lib.rs  raw_xml.rs
crates/ooxml/src/: lib.rs  packaging.rs  relationships.rs
docs/: corpus-analysis.md  implementation-status.md  package.json
docs/.vitepress/: config.ts
docs/adr/: index.md
fixtures/pml/animation/: animation-after-previous.pptx  animation-appear.pptx  animation-fade-in.pptx  animation-fly-in-left.pptx
fixtures/pml/background/: background-color.pptx
fixtures/pml/chart/: chart-embedded.pptx
fixtures/pml/hyperlink/: hyperlink-external.pptx  hyperlink-internal.pptx
fixtures/pml/image/: image-inline.pptx  image-positioned.pptx
fixtures/pml/master/: custom-master.pptx  layout-title-content.pptx  layout-title-slide.pptx
fixtures/pml/notes/: notes-basic.pptx  notes-long.pptx
fixtures/pml/shape/: connector-basic.pptx  connector-colored.pptx  group-basic.pptx  shape-ellipse.pptx  shape-fill-color.pptx  shape-line-color.pptx  shape-position.pptx  shape-rect.pptx  shape-roundrect.pptx  shape-triangle.pptx  text-basic.pptx  text-empty.pptx  text-unicode.pptx  text-xml-special.pptx
fixtures/pml/structure/: multi-slide.pptx  single-slide.pptx  slide-order.pptx
fixtures/pml/table/: table-2x2.pptx  table-3x3.pptx  table-header-row.pptx
fixtures/pml/text/: multi-paragraph.pptx  paragraph-align-center.pptx  paragraph-align-left.pptx  paragraph-align-right.pptx  run-bold-italic.pptx  run-bold.pptx  run-color.pptx  run-font-size-24.pptx  run-font-size-36.pptx  run-italic.pptx  run-underline.pptx
fixtures/pml/transition/: transition-fade.pptx  transition-push.pptx  transition-wipe.pptx
fixtures/sml/cell/: boolean-false.xlsx  boolean-false.xlsx.json  boolean-true.xlsx  boolean-true.xlsx.json  float.xlsx  integer.xlsx  large-number.xlsx  negative.xlsx  small-float.xlsx  string-empty.xlsx  string-unicode.xlsx  string-xml-special.xlsx  string.xlsx  zero.xlsx
fixtures/sml/chart/: bar.xlsx
fixtures/sml/comment/: plain.xlsx  rich.xlsx
fixtures/sml/filtering/: auto-filter.xlsx  sort-state.xlsx
fixtures/sml/format/: currency.xlsx  date.xlsx  decimal.xlsx  integer.xlsx  percent.xlsx  scientific.xlsx
fixtures/sml/hyperlink/: external.xlsx  internal.xlsx
fixtures/sml/layout/: auto-filter.xlsx  col-outline.xlsx  col-width.xlsx  freeze-pane.xlsx  hidden-col.xlsx  hidden-row.xlsx  page-margins.xlsx  page-setup-landscape.xlsx  row-height.xlsx  row-outline.xlsx  tab-color.xlsx
fixtures/sml/merge/: 2x2.xlsx  horizontal.xlsx
fixtures/sml/pivot/: basic.xlsx
fixtures/sml/protection/: sheet.xlsx  workbook.xlsx
fixtures/sml/structure/: defined-name.xlsx  multiple-sheets.xlsx  print-area.xlsx
fixtures/sml/validation/: ignored-error.xlsx  integer-range.xlsx  list.xlsx
fixtures/wml/bookmark/: bookmark-basic.docx
fixtures/wml/comment/: comment-basic.docx
fixtures/wml/field/: toc-basic.docx
fixtures/wml/footnote/: endnote-basic.docx  footnote-basic.docx
fixtures/wml/form/: form-dropdown.docx  form-text.docx
fixtures/wml/header-footer/: footer-default.docx  header-default.docx  header-first-page.docx
fixtures/wml/hyperlink/: hyperlink-external.docx
fixtures/wml/image/: image-anchored.docx  image-inline.docx
fixtures/wml/list/: bullet-nested-2.docx  bullet-single.docx  custom-numbering.docx  decimal-single.docx
fixtures/wml/math/: math-fraction.docx  math-plain.docx
fixtures/wml/paragraph/: align-center.docx  align-justify.docx  align-left.docx  align-right.docx  column-break.docx  indent-first-line.docx  indent-left.docx  line-spacing.docx  outline-level-1.docx  outline-level-2.docx  outline-level-3.docx  page-break.docx  space-after.docx  space-before.docx
fixtures/wml/settings/: settings-even-odd-headers.docx  settings-tab-stop.docx
fixtures/wml/table/: basic-1x1.docx  basic-2x3.docx  cell-background.docx  cell-borders.docx  cell-padding.docx  merged-horizontal.docx  merged-vertical.docx  row-height.docx  table-width.docx
fixtures/wml/text/: all-caps.docx  (+15 more)
spec/: ooxml-features.yaml  ooxml-names.yaml
spec/fixtures/: pml.yaml  sml.yaml  wml.yaml
tooling/claude-hooks/: verify-hooks.sh
(+25 files in other folders)
