[workspace]
resolver = "2"
members = [
    "crates/ooxml",
    "crates/ooxml-wml",
    "crates/ooxml-codegen",
    "crates/ooxml-corpus",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pterror/ooxml"

[workspace.dependencies]
# Internal crates
ooxml = { path = "crates/ooxml" }
ooxml-wml = { path = "crates/ooxml-wml" }
ooxml-codegen = { path = "crates/ooxml-codegen" }
ooxml-corpus = { path = "crates/ooxml-corpus" }

# External dependencies
zip = "2"
quick-xml = { version = "0.36", features = ["serialize"] }
thiserror = "2"
insta = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
