[workspace]
resolver = "2"
members = [
    "crates/ooxml",
    "crates/ooxml-wml",
    "crates/ooxml-sml",
    "crates/ooxml-codegen",
    "crates/ooxml-corpus",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pterror/ooxml"

[workspace.dependencies]
# Internal crates
ooxml = { path = "crates/ooxml" }
ooxml-wml = { path = "crates/ooxml-wml" }
ooxml-sml = { path = "crates/ooxml-sml" }
ooxml-codegen = { path = "crates/ooxml-codegen" }
ooxml-corpus = { path = "crates/ooxml-corpus" }

# External dependencies
zip = "7"
quick-xml = { version = "0.39", features = ["serialize"] }
thiserror = "2"
insta = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rayon = "1"
rusqlite = { version = "0.38", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
