[package]
name = "ooxml-dml"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "DrawingML support for the ooxml library (shared by Word, Excel, PowerPoint)"

[dependencies]
quick-xml.workspace = true
thiserror.workspace = true
serde.workspace = true

[build-dependencies]
ooxml-codegen.workspace = true
