[package]
name = "ooxml-pml"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PresentationML (PPTX) support for the ooxml library"

[dependencies]
ooxml-opc.workspace = true
ooxml-dml.workspace = true
quick-xml.workspace = true
thiserror.workspace = true
serde.workspace = true
