[package]
name = "ooxml-sml"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "SpreadsheetML (XLSX) support for the ooxml library"

[dependencies]
ooxml.workspace = true
quick-xml.workspace = true
thiserror.workspace = true
serde.workspace = true
