[package]
name = "ooxml-sml"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "SpreadsheetML (XLSX) support for the ooxml library"

[dependencies]
ooxml-opc.workspace = true
quick-xml.workspace = true
thiserror.workspace = true
serde.workspace = true

[dev-dependencies]
criterion.workspace = true

[build-dependencies]
ooxml-codegen.workspace = true

[[bench]]
name = "parse_benchmark"
harness = false
