[package]
name = "ooxml-wml"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WordprocessingML (DOCX) support for the ooxml library"

[dependencies]
ooxml-opc.workspace = true
ooxml-xml.workspace = true
ooxml-omml.workspace = true
quick-xml.workspace = true
thiserror.workspace = true
serde.workspace = true

[build-dependencies]
ooxml-codegen.workspace = true
